Javascript erste Schritte

--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 <body>
+
+
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+<script src="js/script.js"></script>
+
+<button type="button">Test</button>
+<p id="hiddenMessage" style="display:none">Wohoo</p>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+
 </body>
 </html>
