--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <script src="js/script.js"></script>
 
-<button type="button">Test</button>
+<button type="button" onclick="revealMessage()">Test</button>
 <p id="hiddenMessage" style="display:none">Wohoo</p>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
 
