--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <button type="button" onclick="revealMessage()">Test</button>
 
-<p id="hiddenMessage" style="display:none">Wohoo</p>
+<p id="hiddenMessage" style="display:none">Woh oo!</p>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
 
