--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-	<script src="js/script.js"></script>
-</head>
+	<head>
+		<script src="js/script.js"></script>
+	</head>
 
-<body>
+	<body>
 
-<button type="button" onclick="revealMessage()">Test</button>
+		<button type="button" onclick="revealMessage()">Test</button>
 
-<p id="hiddenMessage" style="display:none">Woh oo!</p>
+		<p id="hiddenMessage" style="display:none">Woh oo!</p>
 
+		<img scr="PieceOfMind.png" alt ="Emblem">
 
-</body>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+
+	</body>
+
 </html>
