--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<p id="hiddenMessage" style="display:none">Woh oo!</p>
 
-		<img scr="PieceOfMind.png" alt ="Emblem">
+		<img scr="/PieceOfMind.png" alt ="Emblem">
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
 
