--- a/index.html
+++ b/index.html
@@ -2,18 +2,34 @@
 <html>
 
 	<head>
-		<script src="js/script.js"></script>
+		<title>Piece of Mind</title>
+
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+
+		<style>
+			body {
+				padding: 50px
+			}
+
+			.Emblem{
+				position: fixed;
+				top:  50%;
+				left:  50%;
+				margin-top: -250px ;
+				margin-left: -250px ;
+			}
+		</style>
+
+
 	</head>
 
 	<body>
 
-		<button type="button" onclick="revealMessage()">Test</button>
+		<img src="PieceOfMind.png" alt='Emblem' class = "Emblem">
 
-		<p id="hiddenMessage" style="display:none">Woh oo!</p>
-
-		<img src="PieceOfMind.png">
-
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+		<script>
+			const Emblem = document.querySelector('.Emblem');
+		</script>
 
 	</body>
 
