--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 				position: fixed;
 				top:  50%;
 				left:  50%;
-				margin-top: -250px ;
-				margin-left: -250px ;
+				margin-top: -15% ;
+				margin-left: -15% ;
+				width: 30%;
 			}
 		</style>
 
