--- a/index.html
+++ b/index.html
@@ -1,36 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html class="no-js" lang="">
 
 	<head>
 		<title>Piece of Mind</title>
 
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
 
-		<style>
-			body {
-				padding: 50px
-			}
-
-			.Emblem{
-				position: fixed;
-				top:  50%;
-				left:  50%;
-				margin-top: -15% ;
-				margin-left: -15% ;
-				width: 30%;
-			}
-		</style>
+		<link rel="stylesheet" href="css/app.css">
 
 
 	</head>
 
 	<body>
+		<img id = 'Emblem' src="PieceOfMind.png">
 
-		<img src="PieceOfMind.png" alt='Emblem' class = "Emblem">
-
-		<script>
-			const Emblem = document.querySelector('.Emblem');
-		</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
+		<script src="js/script.js" defer></script>
 
 	</body>
 
