--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 	</head>
 
 	<body>
-		<img id = 'Emblem' src="PieceOfMind.png">
+		<img id = 'Emblem' src = "PieceOfMind.png">
+		<img id = 'Wheel' src = 'WHEEL.png'>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/Draggable.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
 		<script src="js/script.js" defer></script>
 
 	</body>
