--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 	</head>
 
 	<body>
-		<img id = 'Emblem' src = 'PieceOfMind.png' >
-		<img id = 'Wheel' src = 'WHEEL.png'>
+		
+		<img id = 'Emblem' src = 'PieceOfMind.png'>
+		<img id = 'Rad' src = 'Rad.png'>
 		<video autoplay muted id = 'Willkommen'>
 			<source src = 'Willkommen.mov'>
 		</video>
+
+
+		<span id='Griff'></span>
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/Draggable.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
