--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<img id = 'Emblem' src = 'PieceOfMind.png'>
 		<img id = 'Rad' src = 'Rad.png'>
 		<video autoplay muted id = 'Willkommen'>
-			<source src = 'Willkommen.m4v' type = 'video/mp4' >
+			<source src = 'Willkommen.m4v' type = 'video/x-m4v' >
 		</video>
 
 
