--- a/index.html
+++ b/index.html
@@ -12,15 +12,37 @@
 	</head>
 
 	<body>
+
+		<div id = 'Inhalt'>
 		
-		<img id = 'Emblem' src = 'PieceOfMind.png'>
-		<img id = 'Rad' src = 'Rad.png'>
-		<video autoplay muted id = 'Willkommen'>
-			<source src = 'Willkommen.m4v' type = 'video/x-m4v' >
-		</video>
+			<div id = 'Digital'>
+			
 
+			</div>
 
-		<span id='Griff'></span>
+			<div id = 'Mental'>
+				
+
+			</div>
+
+			<div id = 'Material'>
+				
+
+			</div>
+
+		</div>
+
+		<div id = 'Kern'>
+			
+			<img id = 'Emblem' src = 'PieceOfMind.png'>
+			<img id = 'Rad' src = 'Rad.png'>
+			<video preload muted id = 'Willkommen'>
+				<source src = 'Willkommen.mp4' type = 'video/x-m4v' >
+			</video>
+			<span id='Griff'></span>
+		
+		</div>
+
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/Draggable.min.js"></script>
