--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<div id = 'Inhalt'>
 		
 			<div id = 'Digital'>
-			
+
+				<img id = 'Ticket' src = 'Ticket.png'>
 
 			</div>
 
@@ -44,7 +45,7 @@
 		</div>
 
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/Draggable.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
 		<script src="js/script.js" defer></script>
