--- a/index.html
+++ b/index.html
@@ -37,10 +37,14 @@
 			
 			<img id = 'Emblem' src = 'PieceOfMind.png'>
 			<img id = 'Rad' src = 'Rad.png'>
-			<video preload muted id = 'Willkommen'>
-				<source src = 'Willkommen.mp4' type = 'video/x-m4v' >
+			<video id = 'Willkommen'
+			preload = 'auto' 
+			muted >
+				<source src = 'Willkommen.mp4'>
 			</video>
+
 			<span id='Griff'></span>
+			<span id='Zahnrad'></span>
 		
 		</div>
 
@@ -48,6 +52,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/Draggable.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/ScrollTrigger.min.js"></script>
+		<script src="js/CustomEase.min.js"></script>
 		<script src="js/script.js" defer></script>
 
 	</body>
