--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<div id = 'Digital'>
 
 				<img id = 'Ticket' src = 'Ticket.png'>
+<video class="media-element" id="hero-video-element" autoplay="" muted="" playsinline="" accel-video="true" src="https://www.apple.com/105/media/us/iphone-13-pro/2021/404b23a8-f9c5-466c-b0e6-3d36705b959d/anim/hero-video/medium.mp4"></video>
 
 			</div>
 
@@ -39,7 +40,8 @@
 			<img id = 'Rad' src = 'Rad.png'>
 			<video id = 'Willkommen'
 			preload = 'auto' 
-			muted >
+			muted 
+			playsinline>
 				<source src = 'Willkommen.mp4'>
 			</video>
 
