--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 			<img id = 'Emblem' src = 'PieceOfMind.png'>
 			<img id = 'Rad' src = 'Rad.png'>
 			<video id = 'Willkommen'
-			preload = 'auto' 
+			aria-hidden = 'true'
 			muted 
+			autoplay
 			playsinline>
 				<source src = 'Willkommen.mp4'>
 			</video>
