--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 	<head>
 		<title>Piece of Mind</title>
 
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
-
 		<link rel="stylesheet" href="css/app.css">
 
 
@@ -40,10 +38,10 @@
 			<div id = 'Kern'>
 				
 				<img id = 'Emblem'  
-					 src = 'PieceOfMind.png' class = 'Kern' >
+					 src = 'Symbole/PieceOfMind.png' class = 'Kern' >
 
 				<img id = 'Rad'
-					 src = 'Rad.png' class = 'Kern' >
+					 src = 'Symbole/Rad.png' class = 'Kern' >
 
 				<span id='Griff'
 					class = 'Kern' ></span>
@@ -56,16 +54,22 @@
 					muted 
 					autoplay = 'false'
 					playsinline >
-					<source src = 'Willkommen.mp4' >
+					<source src = 'Video/Willkommen.mp4' >
 				</video>
 				<div id = Sterne>
 					<img id = 'SterneA' 
-						src='Sterne.png' class = 'Kern Sterne' >
+						src='Symbole/Sterne.png' class = 'Kern Sterne' >
 					<img id = 'SterneB'
-						 src='Sterne.png' class = 'Kern Sterne' >			
+						 src='Symbole/Sterne.png' class = 'Kern Sterne' >			
 				</div>
+
 			</div>
 
+			<div class = 'Unterschrift' >
+				
+				<p1>— Julius Kerner</p1>
+
+			</div>
 
 		</div>
 
