--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 		<title>Piece of Mind</title>
 
 		<link rel="stylesheet" href="css/app.css">
-
-
+		<link rel="shortcut icon" href="/favicon.ico?v=2"/>
 	</head>
 
 	<body>
@@ -66,9 +65,17 @@
 			</div>
 
 			<div class = 'Unterschrift' >
-				
-				<p1>— Julius Kerner</p1>
-
+				<div id = 'Cred' class = 'Unterschrift'>
+					<div id = CredSymbole>
+						<img id = 'Visuell' class="CredSymbole" 
+							src = 'Symbole/Visuell.png' width='20'>
+						<img id = 'Konzept'  class="CredSymbole" 
+							src = 'Symbole/Konzept.png' width='20'>
+						<img id = 'Entwicklung'  class="CredSymbole" 
+							src = 'Symbole/Entwicklung.png' width='20'>
+					</div>
+					<p1 style = 'opacity: 0.5'>— &nbsp;&nbsp;&nbsp;Julius Kerner</p1>
+				</div>
 			</div>
 
 		</div>
