Anfang der Anleitung

--- a/index.html
+++ b/index.html
@@ -55,6 +55,14 @@
 					playsinline >
 					<source src = 'Video/Willkommen.mp4' >
 				</video>
+				<video id = 'Anleitung'
+					class = 'Kern'
+					aria-hidden = 'true'
+					muted 
+					autoplay = 'false'
+					playsinline >
+					<source src = 'Video/Anleitung.mp4' >
+				</video>
 				<div id = Sterne>
 					<img id = 'SterneA' 
 						src='Symbole/Sterne.png' class = 'Kern Sterne' >
