--- a/index.html
+++ b/index.html
@@ -72,20 +72,18 @@
 
 			</div>
 
-			<div class = 'Unterschrift' >
-				<div id = 'Cred' class = 'Unterschrift'>
-					<div id = CredSymbole>
-						<img id = 'Visuell' class="CredSymbole" 
-							src = 'Symbole/Visuell.png' width='20'>
-						<img id = 'Konzept'  class="CredSymbole" 
-							src = 'Symbole/Konzept.png' width='20'>
-						<img id = 'Entwicklung'  class="CredSymbole" 
-							src = 'Symbole/Entwicklung.png' width='20'>
-					</div>
-					<p1 style = 'opacity: 0.5'>— &nbsp;&nbsp;&nbsp;Julius Kerner</p1>
-				</div>
+			<div id = 'Cred' class = 'Unterschrift'>
+				<span><div id = CredSymbole>
+					<img id = 'Visuell' class="CredSymbole" 
+						src = 'Symbole/Visuell.png' width='20'>
+					<img id = 'Konzept'  class="CredSymbole" 
+						src = 'Symbole/Konzept.png' width='20'>
+					<img id = 'Entwicklung'  class="CredSymbole" 
+						src = 'Symbole/Entwicklung.png' width='20'>
+				</div></span>
+				<span style = 'opacity: 0.5'>&nbsp;&nbsp;—&nbsp;&nbsp;&nbsp;Julius Kerner
+				</span>
 			</div>
-
 		</div>
 
 
