--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 
 				<img id = 'Rad'
 					 src = 'Symbole/Rad.png' class = 'Kern' >
+				<img id = 'RadSchatten'
+					 src = 'Symbole/RadSchatten.png' class = 'Kern' >
+				<img id = 'RadSchattenWeit'
+					 src = 'Symbole/RadSchattenWeit.png' class = 'Kern' >
 
 				<span id='Griff'
 					class = 'Kern' ></span>
