--- a/index.html
+++ b/index.html
@@ -17,18 +17,40 @@
 			
 				<div id = 'Digital'>
 
-					<img class = 'Digital' 
-					id = 'Ticket' src = 'Ticket.png'>
+					<video id = 'GesteDigital'
+					src='Video/DIGITAL.mp4' 
+					playsinline='true' 
+					webkit-playsinline='true' 
+					preload='auto' 
+					muted='muted' 
+					class='video-background'>
+					</video>
 
 				</div>
 
 				<div id = 'Mental'>
 					
+					<video id = 'GesteMental'
+					src='Video/MENTAL.mp4' 
+					playsinline='true' 
+					webkit-playsinline='true' 
+					preload='auto' 
+					muted='muted' 
+					class='video-background'>
+					</video>
 
 				</div>
 
 				<div id = 'Material'>
 					
+					<video id = 'GesteMaterial' 
+					src='Video/MATERIAL.mp4' 
+					playsinline='true' 
+					webkit-playsinline='true' 
+					preload='auto' 
+					muted='muted' 
+					class='video-background'>
+					</video>
 
 				</div>
 
